Some advance of Script Runner logic.  PowerShell script included

--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -91,10 +92,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="PowerShell\Scripts\Script_IISAppPoolRecycler.ps1" />
+    <None Include="PowerShell\Scripts\Script_IISAppPoolRestarter.ps1" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PowerShell\Scripts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
