--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Configuration\ConfigurationManagerTests.cs" />
     <Compile Include="IISOperations\IISReaderManagerTests.cs" />
     <Compile Include="Module\ApplicationSetting\ApplicationSettingReaderTests.cs" />
+    <Compile Include="Module\ScripRunner\PowerShellScriptReaderTests.cs" />
     <Compile Include="NLogConfiguration\NlogConfigManagerTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
