--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.iis/cco.devops.extension.framework.core.iis.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.iis/cco.devops.extension.framework.core.iis.csproj
@@ -56,6 +56,10 @@
       <Project>{b3c5f28e-ed15-4aaf-8f2a-bec3262ac2ef}</Project>
       <Name>cco.devops.extension.framework.core.windows</Name>
     </ProjectReference>
+    <ProjectReference Include="..\cco.devops.extension.framework.core\cco.devops.extension.framework.core.csproj">
+      <Project>{42ed0ad9-4db4-4994-b626-3b90a695d88e}</Project>
+      <Name>cco.devops.extension.framework.core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
