--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
@@ -92,8 +92,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="PowerShell\Scripts\Script_IISAppPoolRecycler.ps1" />
-    <None Include="PowerShell\Scripts\Script_IISAppPoolRestarter.ps1" />
+    <None Include="PowerShell\Scripts\Script_IISAppPoolRecycler.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="PowerShell\Scripts\Script_IISAppPoolRestarter.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
