--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="app.manifest" />
     <None Include="NLog.config">
@@ -95,6 +96,8 @@
     <None Include="PowerShell\Scripts\Script_IISAppPoolRecycler.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="PowerShell\Scripts\Script_IISAppPoolRestarterBat.Bat" />
+    <None Include="PowerShell\Scripts\Script_IISAppPoolRecyclerBat.Bat" />
     <None Include="PowerShell\Scripts\Script_IISAppPoolRestarter.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
