--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core/cco.devops.extension.framework.core.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core/cco.devops.extension.framework.core.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IExecutionable.cs" />
     <Compile Include="Contracts\IScriptRunnerPlayerable.cs" />
     <Compile Include="Contracts\IScriptShellLoadable.cs" />
     <Compile Include="Contracts\IShellScriptExecutionable.cs" />
+    <Compile Include="Module\ExecutionLogic.cs" />
     <Compile Include="Module\ScripRunner\ScriptRunnerPlayer.cs" />
     <Compile Include="Module\ScripRunner\ShellScriptReader.cs" />
     <Compile Include="Module\ScripRunner\ShellScriptRunner.cs" />
